MadWorld/Deployments/Kubernetes/Environment/Ingress-Deployment-Local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madworld-ingress
  namespace: madworld
spec:
  rules:
    - host: admin.mad-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madworld-admin-loadbalancer
                port:
                  number: 80
    - host: api.mad-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madworld-api-loadbalancer
                port:
                  number: 80
    - host: identity.mad-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madworld-identity-loadbalancer
                port:
                  number: 80
    - host: log.mad-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: seq-loadbalancer
                port:
                  number: 80
    - host: www.mad-world.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madworld-ui-loadbalancer
                port:
                  number: 80
