MadWorld/Deployments/Kubernetes/Environment/Ingress-Deployment-Prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: madworld-ingress
  namespace: madworld
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: api.mad-world.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: madworld-api-loadbalancer
                port:
                  number: 80
  tls:
    - hosts:
        - api.mad-world.nl
      secretName: letsencrypt-prod
